[package]

name = "hoedown"
version = "3.0.1"
authors = ["Jorge Israel Peña <jorge.israel.p@gmail.com>"]
description = "bindings for the Hoedown markdown processor"
repository = "https://github.com/blaenk/hoedown"
license = "BSD-3-Clause"
keywords = ["markdown"]
build = "build.rs"

[dependencies]
bitflags = "*"
libc = "*"

[dev-dependencies]
glob = "*"

[build-dependencies]
regex = "*"
regex_macros = "*"
